--- a/style.css
+++ b/style.css
@@ -1,6 +1,22 @@
-body {
-  font-family: system-ui;
+html, body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: system-ui, sans-serif;
   background: #f06d06;
   color: white;
   text-align: center;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+.container {
+  max-width: 100%;
+  padding: 16px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
